more alignment fixes

--- a/A32NX/html_ui/Pages/VCockpit/Instruments/Airliners/A320_Neo/MFD/A320_Neo_MFD.css
+++ b/A32NX/html_ui/Pages/VCockpit/Instruments/Airliners/A320_Neo/MFD/A320_Neo_MFD.css
@@ -291,6 +291,7 @@ a320-neo-mfd-element #Mainframe #VORDMENavaids #State {
 }
 a320-neo-mfd-element #Mainframe #VORDMENavaids #ID {
   font-size: calc(3 * 1vh * var(--bodyHeightScale));
+  letter-spacing: -3px;
   fill: var(--displayWhite);
 }
 a320-neo-mfd-element #Mainframe #VORDMENavaids #Mode {
